syntax = "proto3";
import "google/protobuf/timestamp.proto";
//option java_multiple_files = true;
option java_package = "com.example.systemevents";

service SystemEvents {
    rpc start(Request) returns (Response) {};
    rpc GetPonude(Katalog) returns (stream Ponuda) {};
    rpc GetKorisnici(Katalog) returns (stream Korisnik) {};
}

message Korisnik {
	Long id = 1;
    String firstName = 2;
    String lastName = 3;
    String location = 4;
    String email = 5;
    String phone = 6;
}

message Ponuda {
	Long id = 1;
  	Long idKatalog = 2;
  	Long idKorisnik = 3;
 	Long ponuda = 4;
}

message Katalog {
	Long id = 1;
    String nazivProizvoda = 2;
    String dodatneInformacije = 3;
    int cijena = 4;
    Date datumObjave = 5; 
    Date datumZavrsetka = 6; 
    Long podkategorijaId = 7;
  	Long korisnikId = 8;
  	boolean zavrseno = 9;
}

message Request {
    google.protobuf.Timestamp timestamp = 1;
    string nazivMikroservisa = 2;
    enum tipAkcije{
        GET = 0;
        UPDATE = 1;
        CREATE = 2;
        DELETE = 3;
    }
    tipAkcije tip = 4;
    string nazivResursa = 5;
}

message Response {
    enum tipOdgovoraNaAkciju{
        SUCCESS = 0;
        ERROR = 1;
    }
    string odgovorNaAkciju = 1;
    tipOdgovoraNaAkciju tip = 2;
}
